tests/snapshots/snapshot_tests__alter_column__change_default.snap
---
source: tests/snapshot_tests.rs
expression: "generate_migration_sql(&source, &target)"
---
-- Alter column public.users.status
ALTER TABLE public.users ALTER COLUMN status SET DEFAULT 'pending';
