tests/snapshots/snapshot_tests__alter_column__change_type.snap
---
source: tests/snapshot_tests.rs
expression: "generate_migration_sql(&source, &target)"
---
-- Alter column public.users.age
ALTER TABLE public.users ALTER COLUMN age TYPE bigint;
