tests/snapshots/snapshot_tests__alter_column__drop_not_null.snap
---
source: tests/snapshot_tests.rs
expression: "generate_migration_sql(&source, &target)"
---
-- Alter column public.users.name
ALTER TABLE public.users ALTER COLUMN name DROP NOT NULL;
